--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,10 @@ html{
 *, *:before, *:after {
     box-sizing: inherit;
 }
-.content-wraper {
+.content-wrap {
     overflow: hidden;
     max-width: 950px;
-    margin: auto;
+    margin: 0 auto;
     padding: 50px;
 }
 .column-narrow {
@@ -30,9 +30,12 @@ html{
     min-height: 175px;
 }
 .column-wide {
-    width: 70;
+    width: 70%;
     float: left;
     min-height: 225px;
+}
+h1, h2, h3 {
+    margin-top: 0;
 }
 body {
     background: #F2EFE9;/*background: lightblue;*/
@@ -43,7 +46,7 @@ body {
 /* Header & Footer 
 ------------------------------------*/
 header {
-    .profile-tag {
+    .profile-img {
        /* margin-right: 30px;
         width: 300px;
         float: left; */
@@ -97,6 +100,7 @@ footer {
     }
 
     h3 {
+        margin: 0;
         font-size:25px;
         font-family: "Quintessential", serif;
         color:#002066;
@@ -127,9 +131,7 @@ footer {
 /* Education
 ------------------------------------*/
 .Ed {
-    max-width: 950px;
-    margin: 0 auto;
-    padding: 50px;
+
     
     h2 {
         margin: 0;
@@ -139,6 +141,7 @@ footer {
     }
 
     h3 {
+        margin: 0;
         font-size: 25px;;
         font-family: "Quintessential", serif;
         color:#002066;
@@ -158,7 +161,7 @@ footer {
 }
 
 /*------  Contact Info  ------------*/
-.contact-info {
+.contact-info a {
     padding: 10px;
     display: inline-block;
 }
